--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-DEBUG=elasticsearch,loopback:connector:elasticsearch,loopback:core:application
+#DEBUG=elasticsearch,loopback:connector:elasticsearch,loopback:core:application
+#DEBUG=elasticsearch
+APP_ENV=dev
 ELASTIC_SEARCH_HOST=http://elasticsearch:9200
 ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
+
+RABBITMQ_URI=amqp://admin:admin@rabbitmq:5672
+RABBITMQ_HANDLER_ERROR=0
