--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
     "start": "node -r source-map-support/register .",
-    "prepublishOnly": "npm run test"
+    "prepublishOnly": "npm run test",
+    "console": "node dist/console.js"
   },
   "repository": {
     "type": "git"
@@ -56,10 +57,12 @@
     "@loopback/service-proxy": "^1.3.17",
     "@types/amqp-connection-manager": "^2.0.10",
     "@types/amqplib": "^0.5.16",
+    "@types/lodash": "^4.14.166",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master"
   },
   "devDependencies": {
